# nlpturk

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md  __main__.py  utils.py
benchmarks/reports/: benchmark_merged-ud-test.txt  benchmark_tr_atis-ud-test.txt  benchmark_tr_framenet-ud-test.txt  benchmark_tr_kenet-ud-test.txt  benchmark_tr_penn-ud-test.txt
benchmarks/zemberek/: _util.py  base.py
nlpturk/: __init__.py  __main__.py  _base.py  doc.py  fs.py  pkg.py  utils.py
nlpturk/pipeline/: sbd.py  tld.py  tokenizer.py
nlpturk/training/: configs.py  preprocess.py  train.py
tests/: test_fs.py  test_preprocess.py  test_tokenizer.py  test_utils.py
website/: Pipfile  requirements.txt
website/app/: utils.py  views.py
website/config/: settings.py  urls.py
website/static/css/: app.css
website/static/css/error/: 404.css  500.css
website/static/js/: app.js
website/static/js/error/: 404.js  500.js
website/templates/: app.html
website/templates/error/: 404.html  500.html
